packages/lu/src/parser/lufile/generated/LUFileParser.js
// Generated from LUFileParser.g4 by ANTLR 4.9.2
// jshint ignore: start
import antlr4 from 'antlr4';
import LUFileParserListener from './LUFileParserListener.js';
import LUFileParserVisitor from './LUFileParserVisitor.js';




const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.PredictionContextCache();

export default class LUFileParser extends antlr4.Parser {

    static grammarFileName = "LUFileParser.g4";
    static literalNames = [ null, null, null, null, null, null, null, null, 
                            null, "'$'", "'@'", null, null, null, null, 
                            null, null, null, "'='", "','", null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, "':'" ];
    static symbolicNames = [ null, "WS", "NEWLINE", "QNA_SOURCE_INFO", "MODEL_INFO", 
                             "COMMENT", "QNA", "HASH", "DASH", "DOLLAR", 
                             "AT", "IMPORT", "REFERENCE", "FILTER_MARK", 
                             "QNA_ID_MARK", "MULTI_LINE_TEXT", "PROMPT_MARK", 
                             "INVALID_TOKEN_DEFAULT_MODE", "EQUAL", "COMMA", 
                             "HAS_ROLES_LABEL", "HAS_FEATURES_LABEL", "NEW_ENTITY_TYPE_IDENTIFIER", 
                             "PHRASE_LIST_LABEL", "NEW_COMPOSITE_ENTITY", 
                             "NEW_REGEX_ENTITY", "NEW_ENTITY_IDENTIFIER", 
                             "NEW_ENTITY_IDENTIFIER_WITH_WS", "NEWLINE_IN_NAME", 
                             "IDENTIFIER", "ESCAPE_CHARACTER", "EXPRESSION", 
                             "TEXT", "NEWLINE_IN_ENTITY", "COMPOSITE_ENTITY", 
                             "REGEX_ENTITY", "ENTITY_TEXT", "COLON_MARK", 
                             "NEWLINE_IN_QNA", "QNA_TEXT" ];
    static ruleNames = [ "file", "paragraph", "newline", "errorString", 
                         "nestedIntentSection", "nestedIntentNameLine", 
                         "nestedIntentName", "nameIdentifier", "nestedIntentBodyDefinition", 
                         "subIntentDefinition", "simpleIntentSection", "intentDefinition", 
                         "intentNameLine", "intentName", "intentBody", "normalIntentBody", 
                         "normalIntentString", "newEntitySection", "newEntityDefinition", 
                         "newEntityListbody", "newEntityLine", "newCompositeDefinition", 
                         "newRegexDefinition", "newEntityType", "newEntityRoles", 
                         "newEntityUsesFeatures", "newEntityRoleOrFeatures", 
                         "newEntityName", "newEntityNameWithWS", "entitySection", 
                         "entityDefinition", "entityLine", "entityName", 
                         "entityType", "compositeEntityIdentifier", "regexEntityIdentifier", 
                         "entityListBody", "normalItemString", "importSection", 
                         "importDefinition", "referenceSection", "referenceDefinition", 
                         "qnaSection", "qnaDefinition", "qnaSourceInfo", 
                         "qnaIdMark", "qnaQuestion", "questionText", "moreQuestionsBody", 
                         "moreQuestion", "errorQuestionString", "qnaAnswerBody", 
                         "filterSection", "promptSection", "filterLine", 
                         "errorFilterLine", "multiLineAnswer", "modelInfoSection", 
                         "modelInfoDefinition" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = LUFileParser.ruleNames;
        this.literalNames = LUFileParser.literalNames;
        this.symbolicNames = LUFileParser.symbolicNames;
    }

    get atn() {
        return atn;
    }



	file() {
	    let localctx = new FileContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, LUFileParser.RULE_file);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 119; 
	        this._errHandler.sync(this);
	        var _alt = 1+1;
	        do {
	        	switch (_alt) {
	        	case 1+1:
	        		this.state = 118;
	        		this.paragraph();
	        		break;
	        	default:
	        		throw new antlr4.error.NoViableAltException(this);
	        	}
	        	this.state = 121; 
	        	this._errHandler.sync(this);
	        	_alt = this._interp.adaptivePredict(this._input,0, this._ctx);
	        } while ( _alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	        this.state = 123;
	        this.match(LUFileParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	paragraph() {
	    let localctx = new ParagraphContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, LUFileParser.RULE_paragraph);
	    try {
	        this.state = 134;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 125;
	            this.newline();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 126;
	            this.nestedIntentSection();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 127;
	            this.simpleIntentSection();
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 128;
	            this.entitySection();
	            break;

	        case 5:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 129;
	            this.newEntitySection();
	            break;

	        case 6:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 130;
	            this.importSection();
	            break;

	        case 7:
	            this.enterOuterAlt(localctx, 7);
	            this.state = 131;
	            this.referenceSection();
	            break;

	        case 8:
	            this.enterOuterAlt(localctx, 8);
	            this.state = 132;
	            this.qnaSection();
	            break;

	        case 9:
	            this.enterOuterAlt(localctx, 9);
	            this.state = 133;
	            this.modelInfoSection();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	newline() {
	    let localctx = new NewlineContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, LUFileParser.RULE_newline);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 139;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===LUFileParser.WS) {
	            this.state = 136;
	            this.match(LUFileParser.WS);
	            this.state = 141;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 142;
	        _la = this._input.LA(1);
	        if(!(_la===LUFileParser.EOF || _la===LUFileParser.NEWLINE)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	errorString() {
	    let localctx = new ErrorStringContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, LUFileParser.RULE_errorString);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 145; 
	        this._errHandler.sync(this);
	        var _alt = 1;
	        do {
	        	switch (_alt) {
	        	case 1:
	        		this.state = 144;
	        		_la = this._input.LA(1);
	        		if(!(_la===LUFileParser.WS || _la===LUFileParser.INVALID_TOKEN_DEFAULT_MODE)) {
	        		this._errHandler.recoverInline(this);
	        		}
	        		else {
	        			this._errHandler.reportMatch(this);
	        		    this.consume();
	        		}
	        		break;
	        	default:
	        		throw new antlr4.error.NoViableAltException(this);
	        	}
	        	this.state = 147; 
	        	this._errHandler.sync(this);
	        	_alt = this._interp.adaptivePredict(this._input,3, this._ctx);
	        } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	nestedIntentSection() {
	    let localctx = new NestedIntentSectionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, LUFileParser.RULE_nestedIntentSection);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 149;
	        this.nestedIntentNameLine();
	        this.state = 150;
	        this.nestedIntentBodyDefinition();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	nestedIntentNameLine() {
	    let localctx = new NestedIntentNameLineContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, LUFileParser.RULE_nestedIntentNameLine);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 155;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===LUFileParser.WS) {
	            this.state = 152;
	            this.match(LUFileParser.WS);
	            this.state = 157;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 158;
	        this.match(LUFileParser.HASH);
	        this.state = 162;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===LUFileParser.WS) {
	            this.state = 159;
	            this.match(LUFileParser.WS);
	            this.state = 164;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 165;
	        this.nestedIntentName();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	nestedIntentName() {
	    let localctx = new NestedIntentNameContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, LUFileParser.RULE_nestedIntentName);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 167;
	        this.nameIdentifier();
	        this.state = 172;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,7,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 170;
	                this._errHandler.sync(this);
	                switch(this._input.LA(1)) {
	                case LUFileParser.WS:
	                    this.state = 168;
	                    this.match(LUFileParser.WS);
	                    break;
	                case LUFileParser.IDENTIFIER:
	                    this.state = 169;
	                    this.nameIdentifier();
	                    break;
	                default:
	                    throw new antlr4.error.NoViableAltException(this);
	                } 
	            }
	            this.state = 174;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,7,this._ctx);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	nameIdentifier() {
	    let localctx = new NameIdentifierContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, LUFileParser.RULE_nameIdentifier);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 175;
	        this.match(LUFileParser.IDENTIFIER);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	nestedIntentBodyDefinition() {
	    let localctx = new NestedIntentBodyDefinitionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, LUFileParser.RULE_nestedIntentBodyDefinition);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 178; 
	        this._errHandler.sync(this);
	        var _alt = 1;
	        do {
	        	switch (_alt) {
	        	case 1:
	        		this.state = 177;
	        		this.subIntentDefinition();
	        		break;
	        	default:
	        		throw new antlr4.error.NoViableAltException(this);
	        	}
	        	this.state = 180; 
	        	this._errHandler.sync(this);
	        	_alt = this._interp.adaptivePredict(this._input,8, this._ctx);
	        } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	subIntentDefinition() {
	    let localctx = new SubIntentDefinitionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, LUFileParser.RULE_subIntentDefinition);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 185;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===LUFileParser.WS) {
	            this.state = 182;
	            this.match(LUFileParser.WS);
	            this.state = 187;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 188;
	        this.match(LUFileParser.HASH);
	        this.state = 189;
	        this.simpleIntentSection();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	simpleIntentSection() {
	    let localctx = new SimpleIntentSectionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, LUFileParser.RULE_simpleIntentSection);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 191;
	        this.intentDefinition();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	intentDefinition() {
	    let localctx = new IntentDefinitionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, LUFileParser.RULE_intentDefinition);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 193;
	        this.intentNameLine();
	        this.state = 195;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,10,this._ctx);
	        if(la_===1) {
	            this.state = 194;
	            this.intentBody();

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	intentNameLine() {
	    let localctx = new IntentNameLineContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, LUFileParser.RULE_intentNameLine);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 200;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===LUFileParser.WS) {
	            this.state = 197;
	            this.match(LUFileParser.WS);
	            this.state = 202;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 203;
	        this.match(LUFileParser.HASH);
	        this.state = 205;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===LUFileParser.HASH) {
	            this.state = 204;
	            this.match(LUFileParser.HASH);
	        }

	        this.state = 210;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===LUFileParser.WS) {
	            this.state = 207;
	            this.match(LUFileParser.WS);
	            this.state = 212;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 213;
	        this.intentName();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	intentName() {
	    let localctx = new IntentNameContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, LUFileParser.RULE_intentName);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 215;
	        this.nameIdentifier();
	        this.state = 220;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,15,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 218;
	                this._errHandler.sync(this);
	                switch(this._input.LA(1)) {
	                case LUFileParser.WS:
	                    this.state = 216;
	                    this.match(LUFileParser.WS);
	                    break;
	                case LUFileParser.IDENTIFIER:
	                    this.state = 217;
	                    this.nameIdentifier();
	                    break;
	                default:
	                    throw new antlr4.error.NoViableAltException(this);
	                } 
	            }
	            this.state = 222;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,15,this._ctx);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	intentBody() {
	    let localctx = new IntentBodyContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, LUFileParser.RULE_intentBody);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 226;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,16,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 223;
	                this.match(LUFileParser.WS); 
	            }
	            this.state = 228;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,16,this._ctx);
	        }

	        this.state = 229;
	        this.normalIntentBody();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	normalIntentBody() {
	    let localctx = new NormalIntentBodyContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, LUFileParser.RULE_normalIntentBody);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 234;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,17,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 231;
	                this.match(LUFileParser.WS); 
	            }
	            this.state = 236;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,17,this._ctx);
	        }

	        this.state = 241; 
	        this._errHandler.sync(this);
	        var _alt = 1;
	        do {
	        	switch (_alt) {
	        	case 1:
	        		this.state = 241;
	        		this._errHandler.sync(this);
	        		var la_ = this._interp.adaptivePredict(this._input,18,this._ctx);
	        		switch(la_) {
	        		case 1:
	        		    this.state = 237;
	        		    this.normalIntentString();
	        		    this.state = 238;
	        		    this.newline();
	        		    break;

	        		case 2:
	        		    this.state = 240;
	        		    this.errorString();
	        		    break;

	        		}
	        		break;
	        	default:
	        		throw new antlr4.error.NoViableAltException(this);
	        	}
	        	this.state = 243; 
	        	this._errHandler.sync(this);
	        	_alt = this._interp.adaptivePredict(this._input,19, this._ctx);
	        } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	normalIntentString() {
	    let localctx = new NormalIntentStringContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, LUFileParser.RULE_normalIntentString);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 248;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===LUFileParser.WS) {
	            this.state = 245;
	            this.match(LUFileParser.WS);
	            this.state = 250;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 251;
	        this.match(LUFileParser.DASH);
	        this.state = 255;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,21,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 252;
	                _la = this._input.LA(1);
	                if(!(((((_la - 1)) & ~0x1f) == 0 && ((1 << (_la - 1)) & ((1 << (LUFileParser.WS - 1)) | (1 << (LUFileParser.ESCAPE_CHARACTER - 1)) | (1 << (LUFileParser.EXPRESSION - 1)) | (1 << (LUFileParser.TEXT - 1)))) !== 0))) {
	                this._errHandler.recoverInline(this);
	                }
	                else {
	                	this._errHandler.reportMatch(this);
	                    this.consume();
	                } 
	            }
	            this.state = 257;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,21,this._ctx);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	newEntitySection() {
	    let localctx = new NewEntitySectionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 34, LUFileParser.RULE_newEntitySection);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 258;
	        this.newEntityDefinition();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	newEntityDefinition() {
	    let localctx = new NewEntityDefinitionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 36, LUFileParser.RULE_newEntityDefinition);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 260;
	        this.newEntityLine();
	        this.state = 262;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,22,this._ctx);
	        if(la_===1) {
	            this.state = 261;
	            this.newEntityListbody();

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	newEntityListbody() {
	    let localctx = new NewEntityListbodyContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 38, LUFileParser.RULE_newEntityListbody);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 268; 
	        this._errHandler.sync(this);
	        var _alt = 1;
	        do {
	        	switch (_alt) {
	        	case 1:
	        		this.state = 268;
	        		this._errHandler.sync(this);
	        		var la_ = this._interp.adaptivePredict(this._input,23,this._ctx);
	        		switch(la_) {
	        		case 1:
	        		    this.state = 264;
	        		    this.normalItemString();
	        		    this.state = 265;
	        		    this.newline();
	        		    break;

	        		case 2:
	        		    this.state = 267;
	        		    this.errorString();
	        		    break;

	        		}
	        		break;
	        	default:
	        		throw new antlr4.error.NoViableAltException(this);
	        	}
	        	this.state = 270; 
	        	this._errHandler.sync(this);
	        	_alt = this._interp.adaptivePredict(this._input,24, this._ctx);
	        } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


